Minor changes, avatar, banner and experience

--- a/index.html
+++ b/index.html
@@ -31,17 +31,21 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images//icons/avatar-icon.png"
+      href="images//icons/avatar-3-icon.png"
     />
   </head>
+  
+  <p class="banner">THIS SITE IS UNDERGOING MAINTENANCE. NEW VERSION WILL BE PUBLISHED SOON.</p> 
 
   <body class="light" id="top">
+    
+
     <header class="header center">
       <h3>
         <a href="https://ahanafasir.netlify.app/" class="link">AA</a>
       </h3>
 
-      <img src="images/avatar.jpg" alt="avatar" class="avatar" />
+      <img src="images/avatar-3.png" alt="avatar" class="avatar" />
 
       <nav class="nav center">
         <ul class="nav__list center">
@@ -79,23 +83,20 @@
       </nav>
     </header>
 
-    <main>
-      <!-- About -->
+    <main>      <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name">Ahanaf Asir</span></h1>
         <h2 class="about__role">A Software Developer.</h2>
         <p class="about__desc">
-          Specializing in creating sleek and user-centric websites. I blend
-          design and functionality seamlessly using HTML, CSS, and JavaScript.
-          Let's bring your ideas to reality!
+          Specializing in Software Testing, E-commerce, and Shopify development.
         </p>
 
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1Jc8YFtCafIFyhm1OYBmvVu-0flLe-LwC/view?usp=sharing"
+            href="https://drive.google.com/file/d/1QXBXrD_DGr4UC9kJa-NY-zLsfsTJAvDV/view?usp=sharing"
           >
-            <span class="btn btn--outline">Resume</span>
+            <span class="btn btn--outline">résumé</span>
           </a>
 
           <a
@@ -133,7 +134,7 @@
             </p>
             <ul class="service__stack">
               <li class="service__stack-item">Web Application Testing</li>
-              <li class="service__stack-item">Shopify Theme Development</li>
+              <li class="service__stack-item">Shopify Development</li>
               <li class="service__stack-item">JavaScript</li>
             </ul>
 
@@ -148,6 +149,38 @@
             <a
               target="_blank"
               href="https://bevycommerce.com/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="service">
+            <h3>Le Kathuriya</h3>
+            <p class="service__description">
+              Digital Consultant
+            </p>
+            <p class="service__description">
+              June 2024 - Present
+            </p>
+            <ul class="service__stack">
+              <li class="service__stack-item">Web Application Testing</li>
+              <li class="service__stack-item">Shopify Development</li>
+              <li class="service__stack-item">E-commerce Administration</li>
+            </ul>
+
+            <!-- <a
+              target="_blank"
+              href="https://github.com/ahanafasir/omnifood"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              target="_blank"
+              href="https://lekathuriya.com/"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -183,7 +216,7 @@
             </a>
           </div>
 
-          <div class="service">
+          <!-- <div class="service">
             <h3>Shingara Production</h3>
             <p class="service__description">
               Digital Consultant
@@ -195,7 +228,7 @@
               <li class="service__stack-item">E-commerce</li>
               <li class="service__stack-item">WordPress</li>
               <li class="service__stack-item">Digital Transformation</li>
-            </ul>
+            </ul> -->
 
             <!-- <a
               target="_blank"
@@ -205,25 +238,25 @@
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a> -->
-            <a
+            <!-- <a
               target="_blank"
               href="https://shingaraproduction.com/"
               aria-label="live preview"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+            </a> -->
           </div>
         </div>
 
-        <!-- <div class="more__services">
+        <div class="more__services">
           <a
             target="_blank"
-            href="https://github.com/ahanafasir?tab=repositories"
+            href="https://www.linkedin.com/in/ahanafasir83/"
             class="link projects__link"
             >learn more</a
           >
-        </div> -->
+        </div>
       </section>
 
 
@@ -331,27 +364,27 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Omnifood</h3>
+            <h3>Twinkle</h3>
             <p class="project__description">
-              Responsive food subscription website
+              E-commerce platform to plan your parties.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">HTML</li>
-              <li class="project__stack-item">CSS</li>
-              <li class="project__stack-item">JavaScript</li>
+              <li class="project__stack-item">Web Application Testing</li>
+              <li class="project__stack-item">Shopify Admin</li>
+              <li class="project__stack-item">Liquid</li>
             </ul>
 
-            <a
+            <!-- <a
               target="_blank"
               href="https://github.com/ahanafasir/omnifood"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
+            </a> -->
             <a
               target="_blank"
-              href="https://o-mnifood.netlify.app/"
+              href="https://twinkle.sa/"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -360,47 +393,49 @@
           </div>
 
           <div class="project">
-            <h3>Contact Form</h3>
+            <h3>ParentData</h3>
             <p class="project__description">
-              Contact form with e-mail functionalities
+              A platform for parents to learn more.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">JavaScript</li>
-              <li class="project__stack-item">PHP</li>
-              <li class="project__stack-item">XAMPP</li>
+              <li class="project__stack-item">Web Application Testing</li>
+              <li class="project__stack-item">Content Management</li>
+              <li class="project__stack-item">WordPress</li>
             </ul>
 
-            <a
+            <!-- <a
               target="_blank"
               href="https://github.com/ahanafasir/contact-form"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a href="#" aria-label="live preview" class="link link--icon">
+            </a> -->
+            <a target="_blank" href="https://parentdata.org/" aria-label="live preview" class="link link--icon">
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
 
           <div class="project">
-            <h3>Asian Power BD</h3>
-            <p class="project__description">SPA for a local power compamny</p>
+            <h3>Portless</h3>
+            <p class="project__description">Merchant dashboard for dropshipping businesses</p>
             <ul class="project__stack">
-              <li class="project__stack-item">Project Lead</li>
+              <li class="project__stack-item">API Testing</li>
+              <li class="project__stack-item">Integration Testing</li>
+              <li class="project__stack-item">Postman</li>
             </ul>
 
-            <a
+            <!-- <a
               target="_blank"
-              href="https://github.com/asian-power"
+              href="https://www.portless.com/"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
+            </a> -->
             <a
               target="_blank"
-              href="https://asianpowerbd.com/"
+              href="https://www.portless.com/"
               aria-label="live preview"
               class="link link--icon"
             >
