--- a/index.html
+++ b/index.html
@@ -458,12 +458,12 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
+          <li class="skills__list-item btn btn--plain">Programming</li>
+          <li class="skills__list-item btn btn--plain">Software Testing</li>
           <!-- <li class="skills__list-item btn btn--plain">SCSS</li> -->
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">PHP</li>
-          <li class="skills__list-item btn btn--plain">SQL</li>
+          <li class="skills__list-item btn btn--plain">Databases</li>
+          <li class="skills__list-item btn btn--plain">APIs</li>
+          <li class="skills__list-item btn btn--plain">Shopify</li>
           <!-- <li class="skills__list-item btn btn--plain">TypeScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Redux</li> -->
