--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
   </head>
   
-  <p class="banner">THIS SITE IS UNDERGOING MAINTENANCE. NEW VERSION WILL BE PUBLISHED SOON.</p> 
+  <!-- <p class="banner">THIS SITE IS UNDERGOING MAINTENANCE. NEW VERSION WILL BE PUBLISHED SOON.</p>  -->
 
   <body class="light" id="top">
     
@@ -94,7 +94,7 @@
         <div class="about__contact center">
           <a
             target="_blank"
-            href="https://drive.google.com/file/d/1QXBXrD_DGr4UC9kJa-NY-zLsfsTJAvDV/view?usp=sharing"
+            href="https://drive.google.com/file/d/1CTjKhAopRKy-LElOGAYfgoQQuCZPEGDT/view?usp=sharing"
           >
             <span class="btn btn--outline">résumé</span>
           </a>
@@ -159,14 +159,14 @@
           <div class="service">
             <h3>Le Kathuriya</h3>
             <p class="service__description">
-              Digital Consultant
+              Shopify Developer
             </p>
             <p class="service__description">
               June 2024 - Present
             </p>
             <ul class="service__stack">
-              <li class="service__stack-item">Web Application Testing</li>
               <li class="service__stack-item">Shopify Development</li>
+              <li class="service__stack-item">Web Application Testing</li>
               <li class="service__stack-item">E-commerce Administration</li>
             </ul>
 
