--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               Shopify Developer
             </p>
             <p class="service__description">
-              June 2024 - Present
+              Apr 2023 - Jul 2024
             </p>
             <ul class="service__stack">
               <li class="service__stack-item">Shopify Development</li>
