--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="https://ahanafasir.netlify.app/" class="link">AA</a>
       </h3>
 
-      <img target="https://drive.google.com/file/d/1aVYEAaiRk68PWaN5ZNV5Tla6NTDcjvCx/view?usp=sharing" src="images/avatar-3.png" alt="avatar" class="avatar" />
+      <img src="images/avatar-3.png" alt="avatar" class="avatar" />
 
       <nav class="nav center">
         <ul class="nav__list center">
